[gd_scene load_steps=6 format=2]

[ext_resource path="res://Bullets/bulletBeigeSilver_outline.png" type="Texture" id=1]
[ext_resource path="res://Bullets/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Laser/LaserParticles.tres" type="Material" id=3]
[ext_resource path="res://Laser/circle_05.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 13.4329

[node name="Bullet" type="Area2D" groups=[
"bullets",
]]
script = ExtResource( 2 )

[node name="SpriteContainer" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpriteContainer"]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="TrailingSmoke" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( -20.2516, -0.73642 )
rotation = -1.5708
emitting = false
amount = 5
lifetime = 0.2
local_coords = false
process_material = ExtResource( 3 )
texture = ExtResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
